# GeoMind

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLI_API_使用指南.md  CLI使用说明.md  CONTRIBUTING.md  CPU运行说明.md  DEVELOPMENT.md  GUIDE.md  GeoCLIP快速指南.md  GeoCLIP集成确认.md  LICENSE  PROJECT_STRUCTURE.md  README.md  TASKS.md  VENV.md  check_ready.py  config.example.yaml  config_glm_example.txt  download_geoclip.py  env.example  pyproject.toml  requirements-dev.txt  requirements.txt  test_config.py  test_geoclip.py  test_vlm.py  verify_geoclip_integration.py  vlm_output.json  修复说明.md  快速开始.md  测试最终修复.md  运行前检查.md  配置修复说明.md  配置指南.md
docs/: API_KEYS_CHECKLIST.md  README.md  VLM_COMPARISON.md
docs/api/: README.md
docs/architecture/: PHRV框架设计说明.md
docs/guides/: configuration.md  custom_tools.md  deepseek_setup.md  deployment.md  geoclip_setup.md  glm_quickstart.md  quickstart.md  scenario_extensions.md  vlm_providers.md
examples/: basic_usage.py  complete_phrv_workflow.py  config_usage.py  custom_tools.py  logging_usage.py  use_geoclip.py  use_geomind_agent.py  use_hypothesis_node.py  use_perception_node.py  use_retrieval_node.py  use_verification_node.py
geomind/: __init__.py  cli.py
geomind/agent/: __init__.py  agent.py  graph.py  state.py
geomind/agent/nodes/: __init__.py  hypothesis.py  perception.py  retrieval.py  verification.py
geomind/api/: __init__.py  app.py  models.py  routes.py
geomind/config/: __init__.py  loader.py  schema.py  settings.py
geomind/prompts/: __init__.py  base.py  hypothesis.py  perception.py  verification.py
geomind/prompts/templates/: example.yaml  hypothesis.yaml  perception.yaml  verification.yaml
geomind/tools/: __init__.py  base.py  registry.py  sandbox.py
geomind/tools/mcp/: __init__.py  client.py  geocode.py  poi_search.py  protocol.py  verification.py
geomind/utils/: __init__.py  cache.py  image.py  logging.py  retry.py
scripts/: activate_venv.ps1  activate_venv.sh  setup_dev_env.ps1  setup_dev_env.sh  verify_setup.py
tests/: conftest.py
tests/unit/: test_agent.py  test_config.py  test_geoclip.py  test_geocode.py  test_hypothesis_node.py  test_hypothesis_verification.py  test_llm.py  test_logging.py  test_mcp.py  test_models_base.py  test_perception.py  test_perception_node.py  test_prompts.py  test_retrieval_node.py  test_sandbox.py  test_state.py  test_tools.py  test_utils.py  test_verification.py  test_verification_node.py  test_vlm.py
